[tool.poetry]
name = "poetrynix"
version = "0.1.0"
description = "complete batteries-included jupyter environment"
authors = ["Bogdan Burlacu <bogdan.burlacu@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
optuna = "^3.1.0"
pmlb = "^1.0.2a0"
seaborn = "^0.12.2"
scikit-build = "^0.16.7"
ipdb = "^0.13.11"
setuptools = "^67.3.2"
ipykernel = "^6.21.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"
sympy = "^1.11.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
