[tool.poetry]
name = "poetrynix"
version = "0.1.0"
description = "complete batteries-included jupyter environment"
authors = ["Bogdan Burlacu <bogdan.burlacu@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.22.0"
ipython = "^8.12.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
optuna = "^3.1.1"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pandas = "^1.5.3"
jupyter = "^1.0.0"
jupyter-server = "^2.5.0"
seaborn = "^0.12.2"
pillow = "9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
