[tool.poetry]
name = "poetrynix"
version = "0.1.0"
description = "complete batteries-included jupyter environment"
authors = ["Bogdan Burlacu <bogdan.burlacu@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.24.0"
ipython = "^8.14.0"
numpy = "^1.25.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
pandas = "^2.0.3"
optuna = "^3.2.0"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
jupyter-server = "^2.7.0"
pmlb = "=1.0.2a0"
sympy = "^1.12"
tabulate = "^0.9.0"
jinja2 = "^3.1.2"
cython = "^3.0.0"
pathos = "^0.3.1"
xlsxwriter = "^3.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
